third_party/move/move-compiler/tests/move_check/parser/invalid_call_lhs_parens_around_name2.exp
error[E03009]: unbound variable
  ┌─ tests/move_check/parser/invalid_call_lhs_parens_around_name2.move:3:10
  │
3 │         (foo)()
  │          ^^^ Invalid function usage. Unbound variable 'foo'

